--- a/src/styles.css
+++ b/src/styles.css
@@ -3,15 +3,24 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 
 .headerboard {
-  padding: 40px 10px;
+  background-color: #703e7c;
+  padding: 30px 20px;
   font-size: 20px;
   font-family: 'Titillium Web', sans-serif;
+  color: #fff;
+  display: flex;
+  justify-content: center;
 }
 
 .container {
-  padding: 0 40px;
+  padding: 40px 40px;
   display: flex;
   flex-direction: row;
 }
@@ -34,16 +43,26 @@
 
 .card2 form input {
   width: 100%;
-  height: 25px;
+  height: 32px;
   text-indent: 5px;
+  transition: 0.5s;
+  border: 1px solid rgb(104, 104, 120);
+}
+.card2 form input:focus {
+border: 2px solid blue;
+border-radius: 3px;
+outline: blue;
 }
 
 .card2 form input[type='submit'] {
   float: right;
-  width: 30%;
-  height: 25px;
+  width: 40%;
+  height: 30px;
   background-color: #fff;
   text-indent: 0;
+  border: 1px solid rgb(41, 41, 72);
+  outline: blue;
+  border-radius: 2px;
 }
 
 .card2 form input[type='submit']:hover {
@@ -58,11 +77,13 @@
 .card1 h2 {
   font-size: 30px;
   letter-spacing: 5px;
+  color: #052739;
 }
 
 .card2 h2 {
   letter-spacing: 1px;
   font-size: 30px;
+  color: #052739;
 }
 
 .topboard {
@@ -77,11 +98,14 @@
   height: 30px;
   background-color: #fff;
   font-weight: 400;
-  transition: 0.1s all;
+  transition: 0.5s all;
+  border: 1px solid rgb(43, 43, 55);
+  border-radius: 3px;
 }
 
 .topboard button:hover {
   background-color: #63c6f7;
+  border: 1px solid rgb(126, 126, 213);
 }
 
 .board ul {
@@ -94,8 +118,23 @@
 
 .board ul li {
   padding: 5px 5px;
+  color: #000000;
 }
 
 .board ul li:nth-of-type(2n) {
   background-color: rgb(224, 224, 224);
+}
+footer {
+  padding: 0 20px ;
+  border: 1px solid black;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  background-color: #021824;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: 'Titillium Web', sans-serif;
 }
