--- a/src/styles.css
+++ b/src/styles.css
@@ -124,6 +124,9 @@ outline: blue;
 .board ul li:nth-of-type(2n) {
   background-color: rgb(224, 224, 224);
 }
+.board ul li:first-child{
+  background-color: #7b717d;
+}
 footer {
   padding: 0 20px ;
   border: 1px solid black;
