--- a/src/styles.css
+++ b/src/styles.css
@@ -119,6 +119,7 @@ body {
   flex-direction: column;
   font-family: 'Titillium Web', sans-serif;
   border: 1px solid black;
+  box-shadow: 0 0 36px 1px rgb(88, 87, 87);
 }
 
 .board ul li {
